--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/5. 导入实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/5. 导入实体模型.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.16 实体模型
+
+#### 4.16.2 实体模型
+
+#### 4.16.2.5 导入实体模型
+
+本节主要介绍导入实体模型的具体操作过程。
+
+#### 4.16.2.5.1 前提条件
+
+a）您需要拥有“实体模型”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.16.2.5.2 操作步骤
+
+a）进入实体模型功能模块，单击三个点按钮 > 导入实体模型，进入“导入实体模型”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/5-1.png)
+
+##### 图5-1 单击导入实体模型
