--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/7. 自动生成实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/7. 自动生成实体模型.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.16 实体模型
+
+#### 4.16.2 实体模型
+
+#### 4.16.2.7 自动生成实体模型
+
+本节主要介绍利用接口生成器自动生成实体模型的具体操作方法。
+
+#### 4.16.2.7.1 前提条件
+
+a）您需要先创建好实体模型模块，关于如何创建实体模型具体请参见《SoFlu（后端）全自动开发平台教程第4.16.1.1节：新增实体模型模块》。
+
+b）您需要先连接好数据库，关于如何连接数据库具体请参见《SoFlu（后端）全自动开发平台教程第2.3.1节：如何连接数据库》。
+
+#### 4.16.2.7.2 操作步骤
+
+a）进入接口生成器功能模块页面，选中数据库，单击下一步进入“选择数据”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/7-1.png)
+
+##### 图7-1 进入“选择数据”页面
