--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/1. 新增配置组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/1. 新增配置组.md
@@ -10,12 +10,12 @@
 
 a）进入配置组管理功能模块，单击新增配置组，打开“新增配置组”页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E9%85%8D%E7%BD%AE%E7%BB%84%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/199206797-a8eed3f8-7e08-4181-b93f-6d0dba6c453b.png)
 
 ##### 图1-1 单击新增配置组
 
 b）在“新增配置组”页面，填写正确的配置组名称、类型、描述，单击新增按钮，可在配置组列表的对应环境中填写相关的配置信息，配置完成单击提交即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E9%85%8D%E7%BD%AE%E7%BB%84%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199206834-90fed61b-b943-4dee-919d-51ba14898cb1.png)
 
 ##### 图1-2 填写配置组相关信息
