--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/3. 删除配置组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/3. 删除配置组.md
@@ -1,1 +1,11 @@
-test
+### 4. 操作指南
+
+#### 4.17 配置组管理
+
+#### 4.17.3 删除配置组
+
+本节主要介绍删除配置组的具体操作方法。
+
+#### 4.17.3.1 操作步骤
+
+a）进入配置组管理功能模块，选中需要删除的配置组，单击三个点按钮 > 删除配置组，弹出二次确认弹窗。
