--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/3. 删除配置组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/3. 删除配置组.md
@@ -9,3 +9,9 @@
 #### 4.17.3.1 操作步骤
 
 a）进入配置组管理功能模块，选中需要删除的配置组，单击三个点按钮 > 删除配置组，弹出二次确认弹窗。
+
+![image](https://user-images.githubusercontent.com/79617492/199207193-53acb122-f3a5-4ece-8e44-309ac615aa44.png)
+
+##### 图3-1 单击删除配置组
+
+b）在二次确认弹窗单击确定即可。
