--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/5. 默认配置组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/17. 配置组管理/5. 默认配置组.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.17 配置组管理
+
+#### 4.17.5 默认配置组
+
+默认配置组里的所有配置都是系统相关配置，用户可根据默认配置组的配置项描述自行填写对应配置项的值。
+
+#### 4.17.5.1 操作步骤
+
+a）进入配置组管理功能模块，单击defaultGroup[默认]，打开“默认配置组”页面。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E9%85%8D%E7%BD%AE%E7%BB%84%E7%AE%A1%E7%90%86/5-1.png)
+
+##### 图5-1 单击复制配置组
