--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/1. 子流程模块/1. 新增子流程模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/1. 子流程模块/1. 新增子流程模块.md
@@ -12,12 +12,12 @@
 
 a）进入子流程管理模块，单击新增子流程模块，进入“新增子流程模块”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/1.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E6%A8%A1%E5%9D%97/image.png)
+![image](https://user-images.githubusercontent.com/79617492/199208744-10baaa94-23ec-4eef-8935-1e455a5e0860.png)
 
 ##### 图1-1 单击新增子流程模块
 
 b）在“新增子流程模块”页面，填写正确的模块名称、描述，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/1.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E6%A8%A1%E5%9D%97/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199208758-5c26b3d8-1368-4e9e-b15e-f081d3f391f8.png)
 
 ##### 图1-2 填写模块相关信息
