--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/1. 子流程模块/2. 修改子流程模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/1. 子流程模块/2. 修改子流程模块.md
@@ -12,12 +12,12 @@
 
 a）进入子流程管理功能模块，选中需要操作的模块，单击三个点按钮 > 修改子流程模块，进入“编辑子流程模块”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/1.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E6%A8%A1%E5%9D%97/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199438366-eddf3afc-e5e2-4acb-a991-311399788674.png)
 
 ##### 图2-1 单击修改子流程模块
 
 b）在“编辑子流程模块”页面，输入修改后的模块名称、描述，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/1.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E6%A8%A1%E5%9D%97/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199438389-2e885fc0-3237-44a0-b180-53aea6c3e68c.png)
 
 ##### 图2-2 输入修改后的模块信息
