--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/1. 子流程模块/3. 删除子流程模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/1. 子流程模块/3. 删除子流程模块.md
@@ -1,1 +1,13 @@
-test
+### 4. 操作指南
+
+#### 4.18 子流程管理
+
+#### 4.18.1 子流程模块
+
+#### 4.18.1.3 删除子流程模块
+
+本节主要介绍删除子流程模块的具体操作方法。
+
+#### 4.18.1.3.1 操作步骤
+
+a）进入子流程管理功能模块，选中需要操作的模块，单击删除子流程模块，弹出二次确认弹窗。
