--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/4. 复制子流程.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/4. 复制子流程.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.18 子流程管理
+
+#### 4.18.2 子流程
+
+#### 4.18.2.4 复制子流程
+
+本节主要介绍复制子流程的具体操作过程。
+
+#### 4.18.2.4.1 前提条件
+
+a）您需要拥有“子流程管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.18.2.4.2 操作步骤
+
+a）进入子流程管理功能模块，选中需要复制的子流程，单击三个点按钮 > 复制子流程，弹出选择模块弹窗。
