--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/5. 导入子流程.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/5. 导入子流程.md
@@ -15,3 +15,11 @@ a）您需要拥有“子流程管理”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 #### 4.18.2.5.2 操作步骤
+
+a）进入子流程管理功能模块，单击三个点按钮 > 导入子流程，进入“导入子流程”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/2.%20%E5%AD%90%E6%B5%81%E7%A8%8B/5-1.png)
+
+##### 图5-1 单击导入子流程
+
+b）在“导入子流程”页面，选择需要导入的模块，以及文件，单击导入即可。
