--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/6. 导出子流程.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/6. 导出子流程.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.18 子流程管理
+
+#### 4.18.2 子流程
+
+#### 4.18.2.6 导出子流程
+
+本节主要介绍导出子流程的具体操作过程。
+
+#### 4.18.2.6.1 前提条件
+
+a）您需要拥有“子流程管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.18.2.6.2 操作步骤
