--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/6. 导出子流程.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/18. 子流程管理/2. 子流程/6. 导出子流程.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入子流程管理功能模块，单击三个点按钮 > 导出子流程，打开“导入子流程”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/2.%20%E5%AD%90%E6%B5%81%E7%A8%8B/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199460182-64dce996-756e-455c-a837-db06d67a021e.png)
 
 ##### 图6-1 单击导出子流程
 
 b）在“导入子流程”页面，勾选需要导出的子流程后，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/18.%20%E5%AD%90%E6%B5%81%E7%A8%8B%E7%AE%A1%E7%90%86/2.%20%E5%AD%90%E6%B5%81%E7%A8%8B/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199460204-97f35d87-7d64-42b6-9d76-bff988b81c76.png)
 
 ##### 图6-2 勾选需要导出的子流程
 
