--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/1. 定时任务模块/3. 删除定时任务模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/1. 定时任务模块/3. 删除定时任务模块.md
@@ -12,7 +12,7 @@
 
 a）进入定时任务功能模块，单击三个点按钮 > 删除定时任务模块，弹出二次确认页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/1.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1%E6%A8%A1%E5%9D%97/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199677940-07bf1003-f59a-4a88-aac6-6280a4f61000.png)
 
 ##### 图3-1 单击删除定时任务模块
 
