--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/1. 新增定时任务.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/1. 新增定时任务.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.19 定时任务
+
+#### 4.19.2 定时任务
+
+#### 4.19.2.1 新增定时任务
+
+新增定时任务，可以对时间秒、分、时、日、月、周、年时间单位设置定时，在启动定时任务之后，将会按照定时时间启动定时任务。
+
+#### 4.19.2.1.1 操作步骤
+
+a）进入定时任务功能模块，选中定时任务模块，单击“加号 > 新增定时任务”，打开“新增定时任务”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/image.png)
+
+##### 图1-1 单击新增定时任务
