--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/1. 新增定时任务.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/1. 新增定时任务.md
@@ -12,19 +12,19 @@
 
 a）进入定时任务功能模块，选中定时任务模块，单击“加号 > 新增定时任务”，打开“新增定时任务”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/image.png)
+![image](https://user-images.githubusercontent.com/79617492/199692862-95cedcb8-e9d4-4e79-9d2d-dc0a666a5ba0.png)
 
 ##### 图1-1 单击新增定时任务
 
 b）在“新增定时任务”页面，输入名称、描述，单击生成Cron，进入“生成Cron”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199692889-201a5ca0-141f-44f3-b335-c8b81e0ffdc6.png)
 
 ##### 图1-2 输入基本信息
 
 c）在“生成Cron”页面，根据实际需求配置生成Cron的条件，单击确定关闭“生成Cron”页面后，单击下一步进入“填写定时任务配置参数”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/199692914-b620f3f4-4e4a-44ab-896e-2145676f6513.png)
 
 ##### 图1-3 配置生成Cron的条件
 
@@ -40,18 +40,18 @@ c3）周和日只能设置其中一个，不可同时设置。
 
 d）在“填写定时任务配置参数”页面，根据需求自定义参数，然后单击提交。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/199692938-29d0e2fa-b50d-4a89-81bd-5f2d618ae918.png)
 
 ##### 图1-4 根据需求自定义参数
 
 e）进入“流程编辑”页面，自定义完成流程图，单击保存并退出，回到定时任务编辑页。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/199692963-cdd82b12-24ac-4df6-ab6b-0e93749b14f0.png)
 
 ##### 图1-5 自定义完成流程图
 
 f）单击提交 > 启动任务即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/199692981-a730b238-0aa5-4ef7-96b8-89d311c29050.png)
 
 ##### 图1-6 单击启动任务
