--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/2. 复制定时任务.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/2. 复制定时任务.md
@@ -18,18 +18,18 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入定时任务功能模块，选中需要复制的定时任务，单击“三个点按钮 > 复制任务”，打开选择模块弹窗。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199693158-341388c4-f16c-42b6-ae29-e7c094da67f9.png)
 
 ##### 图2-1 单击复制任务
 
 b）根据需求选择对应的定时任务模块，进入定时任务编辑页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199693172-a830e266-deee-496e-8841-5027a99d23db.png)
 
 ##### 图2-2 选择对应的定时任务模块
 
 c）在定时任务编辑页面，单击提交即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/199693186-8c96c57e-5c64-452c-b055-7dd2065520ea.png)
 
 ##### 图2-3 单击提交
