--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/4. 导出定时任务.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/4. 导出定时任务.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入定时任务功能模块，单击“三个点按钮 > 导出定时任务”，进入“导出定时任务”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199693496-97a0887b-cbd9-4fca-8106-14cf18fd5529.png)
 
 ##### 图4-1 单击导出定时任务
 
 b）在“导出定时任务”页面，选择需要导出的定时任务，单击确定下载导出文件到本地。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/19.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/2.%20%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199693519-00c285de-c093-4ccc-a11e-de7c78a4539f.png)
 
 ##### 图4-2 下载导出文件到本地
 
