--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/5. 对定时任务进行集群部署.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/5. 对定时任务进行集群部署.md
@@ -1,1 +1,34 @@
-test
+### 4. 操作指南
+
+#### 4.19 定时任务
+
+#### 4.19.2 定时任务
+
+#### 4.19.2.5 对定时任务进行集群部署
+
+定时任务支持集群部署，即支持部署在多台服务器上。每个定时任务只会在其中一台服务器上执行，若出现执行某一定时任务所在服务器故障的情况，其它正常的服务器则会继续执行该定时任务。
+
+本节主要介绍如何对定时任务进行集群部署。
+
+#### 4.19.2.5.1 操作步骤
+
+a）对定时任务进行集群部署与项目部署操作基本一致，项目部署操作详见《SoFlu（后端）全自动开发平台教程第2.9.1节：如何部署项目》。
+
+略有不同的地方在于，若您想要对定时任务进行集群部署，则需要在原有application.yml模板文件的基础上添加如下内容：
+
+```
+# 用户定时任务配置
+custom-job:
+    # 是否集群模式(默认为false，不进行配置时也为false)
+    clustered: true
+    # 线程池配置
+    threadPool:
+        threadCount: 15
+    # 用户自定义集群数据源
+    customDataSource:
+        driverClassName: com.mysql.jdbc.Driver
+        url: jdbc:mysql://x.x.x.x:3306/database_name?characterEncoding=UTF-8
+        username: root
+        password: 123456
+        maxActive: 20
+```
