--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/5. 对定时任务进行集群部署.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/19. 定时任务/2. 定时任务/5. 对定时任务进行集群部署.md
@@ -32,3 +32,13 @@ custom-job:
         password: 123456
         maxActive: 20
 ```
+
+```
+注意：
+
+a1）其中的“x.x.x.x”为服务器地址，请根据实际情况填写。
+
+a2）以上是单台服务器对定时任务进行集群部署的流程，多台服务器的部署流程是一样的。但需要注意的是，当多台服务器分别进行集群部署时，它们的数据库地址必须相同，即它们都指向同一个数据库。
+
+a3）定时任务会在已启动的服务器上执行，若有多台服务器同时启动，定时任务的执行情况则随机分布。
+```
