--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/1. 拦截器模块/1. 新增拦截器模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/1. 拦截器模块/1. 新增拦截器模块.md
@@ -12,24 +12,24 @@
 
 a）进入项目管理页面，选择“拦截器”功能模块，单击“新增拦截器模块”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/image.png)
+![image](https://user-images.githubusercontent.com/79617492/199693983-bde77173-1a9d-4bd0-a891-0f365f2a1cd8.png)
 
 ##### 图1-1 单击新增拦截器模块
 
 b）系统弹出新增拦截器模块页面，输入拦截器模块的名称和描述信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199693999-2073906c-bc3e-4624-ae99-baa1fae76ccd.png)
 
 ##### 图1-2 输入拦截器模块的名称和描述信息
 
 c）单击“确定”，完成新增拦截器模块。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/199694015-954f31c1-8846-403b-9eef-79469cf0ddb3.png)
 
 ##### 图1-3 完成新增拦截器模块
 
 ##### 说明：除了直接新增拦截器模块以外，还可以在已创建的拦截器模块下再去新增拦截器子模块。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/199694028-7dae9ae2-c105-4d60-92b2-e61d44c6d869.png)
 
 ##### 图1-4 在已创建的拦截器模块下再新增拦截器子模块
