--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/1. 拦截器模块/2. 修改拦截器模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/1. 拦截器模块/2. 修改拦截器模块.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.20 拦截器
+
+#### 4.20.1 拦截器模块
+
+#### 4.20.1.2 修改拦截器模块
+
+本节主要介绍在项目中新增拦截器模块的具体操作过程。
+
+#### 4.20.1.2.1 操作步骤
+
+a）进入拦截器页面，选中需修改的拦截器模块，单击旁边的三个点按钮，选择“修改拦截器模块”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/2-1.png)
+
+##### 图2-1 单击修改拦截器模块
