--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/1. 拦截器模块/2. 修改拦截器模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/1. 拦截器模块/2. 修改拦截器模块.md
@@ -12,13 +12,13 @@
 
 a）进入拦截器页面，选中需修改的拦截器模块，单击旁边的三个点按钮，选择“修改拦截器模块”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199694211-dd7fabcc-4541-4d0a-a7e4-143af8cd5901.png)
 
 ##### 图2-1 单击修改拦截器模块
 
 b）系统弹出编辑拦截器模块对话框，修改拦截器模块的名称和描述信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1.%20%E6%8B%A6%E6%88%AA%E5%99%A8%E6%A8%A1%E5%9D%97/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199694227-6f67b91e-bb47-4564-b0b5-ec125b55f93b.png)
 
 ##### 图2-2 修改拦截器模块的名称和描述信息
 
