--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/1. 新增接口前执行拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/1. 新增接口前执行拦截器.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.20 拦截器
+
+#### 4.20.2 拦截器
+
+#### 4.20.2.1 新增接口前执行拦截器
+
+新增接口前执行拦截器，在执行接口时，会优先之前拦截器里面的流程，然后再根据拦截器的响应结果判断是否要继续执行接口的流程。适用于在执行接口前要先执行某个操作，比如执行接口前要先初始化数据，所以在拦截器中编写初始化数据的流程即可。
+
+#### 4.20.2.1.1 前提条件
+
+a）您需要拥有“拦截器”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.20.2.1.2 步骤引导
+
+a）新增接口前执行拦截器
+
+b）接口管理绑定拦截器
