--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/1. 新增接口前执行拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/1. 新增接口前执行拦截器.md
@@ -19,3 +19,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）新增接口前执行拦截器
 
 b）接口管理绑定拦截器
+
+#### 4.20.2.1.2.1 新增接口前执行拦截器
+
+a）进入项目管理页面，选择拦截器模块，选中已创建的拦截器模块，单击“+”按钮，选择“新增拦截器”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/image.png)
+
+##### 图1-1 单击新增拦截器
+
+b）填写拦截器基本信息，提交拦截器，执行类型选择接口前执行，单击“提交”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-2.png)
+
+##### 图1-2 填写拦截器基本信息
+
+c）单击“进入模型编辑”编辑拦截器流程图。
