--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/1. 新增接口前执行拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/1. 新增接口前执行拦截器.md
@@ -51,3 +51,29 @@ e）单击输出结果组件，选择输出结果。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-5.png)
 
 ##### 图1-5 选择输出结果
+
+##### 说明：输出结果可以选择默认的输出结果或者自定义的输出结果，但是自定义的输出结果中必须包含result字段，result字段是用来判断拦截器执行完成后是否要继续执行接口。
+
+f）单击输出项值的未选中记录方框，设置输出结果字段值，单击确定。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-6.png)
+
+##### 图1-6 设置输出结果字段值
+
+##### 说明：result字段值为1时，表示继续执行接口操作，result字段值为0时，表示不执行后续接口操作；若无该字段，系统将默认为1，继续执行后续接口操作。
+
+g）拦截器流程图画完之后，单击保存并退出即可。
+
+h）回到编辑拦截器页面，单击“提交”再次提交拦截器信息，然后单击“测试用例”检验拦截器程序是否可以正常运行。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-7.png)
+
+##### 图1-7 提交拦截器信息并检验运行状况
+
+#### 4.20.2.1.2.2 接口管理绑定拦截器
+
+a）进入接口管理页面，单击新增接口模块旁边的三个点按钮，选择“拦截器白名单设置”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-8.png)
+
+##### 图1-8 选择“拦截器白名单设置”
