--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/2. 新增接口后执行拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/2. 新增接口后执行拦截器.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.20 拦截器
+
+#### 4.20.2 拦截器
+
+#### 4.20.2.2 新增接口后执行拦截器
+
+接口后执行拦截器，即在接口执行完成后，再执行拦截器。
+
+适用情况：执行拦截器时，需要用到接口返回的相关参数。
+
+#### 4.20.2.2.1 前提条件
+
+a）您需要拥有“拦截器”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.20.2.2.2 步骤引导
+
+a）新增接口后执行拦截器
+
+b）接口管理绑定拦截器
