--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/2. 新增接口后执行拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/2. 新增接口后执行拦截器.md
@@ -39,3 +39,21 @@ c）进入拦截器参数列表页面，单击“选择输出结果”。
 ##### 图2-2 单击“选择输出结果
 
 d）选择与绑定接口对应的输出结果，若没有，则单击“新增输出结果”进行创建即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-3.png)
+
+##### 图2-3 选择与绑定接口对应的输出结果
+
+##### 注意：接口后执行拦截器选择的输出结果必需与绑定的接口选择的输出结果项一致，因为接口的输出结果项的值是作为拦截器的接口入参，若两者不一致，拦截器则无法获取到接口响应的字段信息。
+
+e）选择完输出结果，单击提交。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-4.png)
+
+##### 图2-4 单击提交
+
+f）单击进入模型编辑，进入流程图编辑。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-5.png)
+
+##### 图2-5 进入流程图编辑
