--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/2. 新增接口后执行拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/20. 拦截器/2. 拦截器/2. 新增接口后执行拦截器.md
@@ -57,3 +57,23 @@ f）单击进入模型编辑，进入流程图编辑。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-5.png)
 
 ##### 图2-5 进入流程图编辑
+
+g）拦截器流程图编辑完成后，单击保存并退出。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-6.png)
+
+##### 图2-6 单击保存并退出
+
+h）回到编辑拦截器页面，单击提交再次提交拦截器信息，然后单击测试用例检验拦截器接口是否可以正常运行。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-7.png)
+
+##### 图2-7 提交拦截器信息并检验运行状况
+
+#### 4.20.2.2.2.2 接口管理绑定拦截器
+
+a）进入接口管理页面，单击新增接口模块旁边的三个点按钮，选择“拦截器白名单设置”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/20.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2.%20%E6%8B%A6%E6%88%AA%E5%99%A8/2-8.png)
+
+##### 图2-8 选择“拦截器白名单设置”
