--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/1. 初始化器模块/1. 新增初始化器模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/1. 初始化器模块/1. 新增初始化器模块.md
@@ -12,13 +12,13 @@
 
 a）进入项目管理页面，选择“拦截器”功能模块，单击新增拦截器模块。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/1.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8%E6%A8%A1%E5%9D%97/image.png)
+![image](https://user-images.githubusercontent.com/79617492/199927075-fe89c865-9175-4ea6-b878-ad863773915a.png)
 
 ##### 图1-1 单击新增拦截器模块
 
 b）系统弹出新增拦截器模块页面，输入拦截器模块的名称和描述信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/1.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8%E6%A8%A1%E5%9D%97/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199927095-7f53e791-7e3a-4514-8295-a75176e00f34.png)
 
 ##### 图1-2 输入拦截器模块的名称和描述信息
 
@@ -26,6 +26,6 @@ c）单击“确定”，完成新增拦截器模块。
 
 说明：除了直接新增初始化器模块以外，还可以在已创建的初始化器模块下再去新增初始化器子模块，如图所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/1.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8%E6%A8%A1%E5%9D%97/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/199927121-bba8bbd4-4494-4ff0-a128-d9f0b5e1b17f.png)
 
 ##### 图1-3 在已创建的初始化器模块下再新增初始化器子模块
