--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/1. 初始化器模块/2. 修改初始化器模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/1. 初始化器模块/2. 修改初始化器模块.md
@@ -12,12 +12,12 @@
 
 a）单击初始化器模块，选中需修改的初始化器模块，单击旁边的三个点按钮，选择“修改初始化器模块”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/1.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8%E6%A8%A1%E5%9D%97/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199929317-8487afbd-4b80-40c6-9c1d-57d8e934d5f0.png)
 
 ##### 图2-1 选择“修改初始化器模块”
 
 b）修改初始化器模块的名称和描述信息，然后单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/1.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8%E6%A8%A1%E5%9D%97/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199929330-1599caac-dc4b-4741-8225-e140d0ea61d4.png)
 
 ##### 图2-2 修改初始化器模块的名称和描述信息
