--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/1. 初始化器模块/3. 删除初始化器模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/1. 初始化器模块/3. 删除初始化器模块.md
@@ -12,6 +12,12 @@
 
 a）进入初始化器页面，选中需删除的初始化器模块，单击旁边的三个点按钮，选择“删除初始化器模块”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/1.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8%E6%A8%A1%E5%9D%97/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199929649-3b9f7fbc-5403-45f2-b193-a195162344ce.png)
 
 ##### 图3-1 选择“删除初始化器模块”
+
+b）系统提示“是否确定删除初始化器模块”，单击确定即删除完成。
+
+![image](https://user-images.githubusercontent.com/79617492/199929672-7f9b6c65-bde1-4822-9010-dfc6c25ee2a5.png)
+
+##### 图3-2 单击确定
