--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/1. 新增初始化器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/1. 新增初始化器.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.21 初始化器
+
+#### 4.21.2 初始化器
+
+#### 4.21.2.1 新增初始化器
+
+系统提供该功能，用户可以以画流程图的方式，新增初始化器，启动初始化器后，项目每次启动时，会立刻执行初始化器里面的流程。当有多个初始化器时，用户可以选择按顺序执行或者是异步执行初始化器。
+
+本节为您介绍新增初始化器的具体操作过程。
+
+#### 4.21.2.1.1 前提条件
+
+a）您需要拥有“初始化器”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.21.2.1.2 操作步骤
