--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/1. 新增初始化器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/1. 新增初始化器.md
@@ -17,3 +17,17 @@ a）您需要拥有“初始化器”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 #### 4.21.2.1.2 操作步骤
+
+a）单击初始化器模块，单击对应初始化器模块右侧的“+”号，选择新增初始化器。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/image.png)
+
+##### 图4-1 选择新增初始化器
+
+b）在初始化器管理页面，填写初始化器的基本信息，执行类型，执行顺序以及状态，然后单击下一步。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/4-2.png)
+
+##### 图4-2 填写初始化器相关信息
+
+##### 说明：执行类型：若选择“顺序执行”时，要输入执行顺序，当有多个已启动的初始器时，按照执行顺序执行对应的初始器。若选择“异步执行”，则没有顺序，所有已启用的初始器都会一起执行。
