--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/1. 新增初始化器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/1. 新增初始化器.md
@@ -43,3 +43,15 @@ d）单击“进入模型编辑”开始绘制初始化器的流程图。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/4-4.png)
 
 ##### 图4-4 绘制初始化器的流程图
+
+e）进入窗体视图，根据需求绘制初始化器的流程图，绘制完成后单击保存并退出。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/4-5.png)
+
+##### 图4-5 根据需求绘制初始化器的流程图
+
+f）退出窗体视图，单击提交再次提交初始化器的信息，单击执行初始化器即可测试初始化器是否可以正常运行。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/4-6.png)
+
+##### 图4-6 再次提交初始化器的信息并检验运行状况
