--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/2. 修改初始化器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/2. 修改初始化器.md
@@ -1,1 +1,13 @@
-test
+### 4. 操作指南
+
+#### 4.21 初始化器
+
+#### 4.21.2 初始化器
+
+#### 4.21.2.2 修改初始化器
+
+本节主要介绍修改初始化器的具体操作过程。
+
+#### 4.21.2.2.1 操作步骤
+
+a）进入初始化器页面，选中需修改的初始化器，单击旁边的三个点按钮，选择“修改初始化器”。
