--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/3. 删除初始化器.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/21. 初始化器/2. 初始化器/3. 删除初始化器.md
@@ -12,12 +12,12 @@
 
 a）进入初始化器页面，选中需删除的初始化器，单击旁边的三个点按钮，选择“删除初始化器”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199930493-2c23f372-69d4-4473-bb58-6c47b412c5a8.png)
 
 ##### 图3-1 选择“删除初始化器”
 
 b）系统提示“是否确定删除初始化器”，单击“确定”即删除完成。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/2.%20%E5%88%9D%E5%A7%8B%E5%8C%96%E5%99%A8/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199930513-c7c13e89-c6d7-4dfa-b6c6-dd7dcbd15e6c.png)
 
 ##### 图3-2 单击“确定”
