--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/1. 创建第三方脚本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/1. 创建第三方脚本.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.22 第三方脚本
+
+#### 4.22.1 创建第三方脚本
+
+平台支持创建Python类型或Shell类型第三方脚本，创建好第三方脚本之后，您便可以在编辑接口流程图时使用第三方脚本组件引用脚本内容，再通过调用接口来执行第三方脚本内容。
+
+本节为您介绍如何创建第三方脚本以及相关注意事项。
+
+##### 说明：第三方脚本组件的相关使用详情，您可以参见文档《SoFlu（后端）全自动开发平台教程第6.8.1节：第三方脚本组件》。
+
+#### 4.22.1.1 前提条件
+
+您已创建好第三方脚本模块。
+
+#### 4.22.1.1.1 操作步骤
+
+a）进入项目“第三方脚本”功能模块页面，选中已创建好的第三方脚本模块，单击“+ > 新增第三方脚本”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/image.png)
+
+##### 图1-1 单击新增第三方脚本
