--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/4. 导出第三方脚本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/4. 导出第三方脚本.md
@@ -10,13 +10,13 @@
 
 a）进入项目“第三方脚本”功能模块，单击“... > 导出第三方脚本”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/200262406-2b1f5132-ac50-4d04-8071-36bd3d28e3e2.png)
 
 ##### 图4-1 单击导出第三方脚本
 
 b）勾选需导出的第三方脚本，输入导出脚本文件的文件名（若未输入则自动生成），选择导出脚本文件是否包含模块信息，最后单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/200262426-96b7a88d-3813-44c5-aade-1cf134a3463e.png)
 
 ##### 图4-2 勾选需导出的第三方脚本
 
