--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/1. 变量字段类型模块/3. 删除变量字段类型模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/1. 变量字段类型模块/3. 删除变量字段类型模块.md
@@ -12,12 +12,12 @@
 
 a）进入变量字段类型页面，选中需删除的变量字段类型模块，单击旁边的三个点按钮，选择“删除变量字段类型模块”，如图3-1所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/200265618-5259c3a9-fe7e-45c8-9ffa-d57373c50b81.png)
 
 ##### 图3-1 删除变量字段类型模块
 
 b）系统提示“是否确定删除变量字段类型模块”，单击“确定”即删除完成，如图1-2所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/200265639-886dc7d8-e435-4608-9d48-143ca4a05290.png)
 
 ##### 图3-2 确定删除
