--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/1. 新增自定义变量字段类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/1. 新增自定义变量字段类型.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.23 变量字段类型
+
+#### 4.23.2 变量字段类型
+
+#### 4.23.2.1 新增自定义变量字段类型
+
+系统提供该功能，用户可以自定义变量的字段类型，将编写好的程序打包成jar包，在平台上加载这个jar包，即可在新增变量字段类型中添加对应的自定义变量类型。
+
+#### 4.23.2.1.1 前提条件
+
+a）您需要拥有“扩展Jar包”以及“变量字段类型”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.23.2.1.2 操作步骤
+
+a）首先用户需要在java编译器中编写好自定义程序，并打包成jar包。
