--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/1. 数据库设置管理/1. 配置数据类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/1. 数据库设置管理/1. 配置数据类型.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.1 数据库设置管理
+
+#### 4.24.1.1 配置数据类型
+
+配置数据类型，即配置用户在新增数据库表时可选的字段类型数据源。
+
+#### 4.24.1.1.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.1.1.2 操作步骤
