--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/1. 新增数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/1. 新增数据库.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.2 数据库管理
+
+#### 4.24.2.1 新增数据库管理
+
+系统提供该功能，您可以在平台中新增数据库名称，进行新建表、新增字段、设置索引或外键等一系列操作，然后通过数据库连接功能连接到服务器的数据库，将在平台新增的数据库表等信息可以同步到服务器的数据库中去。
+
+#### 4.24.2.1.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.2.1.2 操作步骤
+
+a）进入项目，单击数据库设计 > 新增数据库。
