--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/2. 修改数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/2. 修改数据库.md
@@ -17,3 +17,15 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 #### 4.24.2.2.2 操作步骤
 
 a）进入数据库设计功能模块页面，选中需要修改的数据库，单击三个点按钮 > 修改数据库。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/2-1.png)
+
+##### 图2-1 单击修改数据库
+
+b）进入编辑项目数据库页面，填写需要修改的数据库名称，单击“确定”即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/2-2.png)
+
+##### 图2-2 填写需要修改的数据库名称
+
+##### 说明：当前数据库的名称只作用于平台上管理新建的数据库表，修改数据库名称不会影响到服务器上的数据库名称。
