--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/5. 连接数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/5. 连接数据库.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.2 数据库管理
+
+#### 4.24.2.5 连接数据库
+
+本节为您介绍如何连接服务器上的数据库，平台支持的数据库类型包括：MySQL、Oracle、SQL Server、PostgreSQL、Tidb、DB2，连接后可以将平台上新建表的数据信息同步到服务器上的数据库。
+
+#### 4.24.2.5.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.2.5.2 操作步骤
+
+a）进入数据库设计功能模块页面，选中需要连接的数据库，单击三个点按钮 > 数据库连接。
