--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/5. 连接数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/5. 连接数据库.md
@@ -43,3 +43,17 @@ c2）DB2数据库：该数据库不支持IF EXISTS语法，因此不支持重建
 
 c3）sql server数据库：更换字段主键时，需先将该字段设置为非空，然后同步到服务器的数据库后，再设置该字段为主键，然后再进行同步，主键才会生效。
 ```
+
+d）填写其他信息后，单击“提交”即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/5-4.png)
+
+##### 图5-4 填写其他信息
+
+```
+说明：
+
+d1）连接数据库后，可以在数据库设计中新建对应类型的表、字段、设置索引或外键等操作，然后同步到服务器的数据库。（数据库操作请参考“操作指南-4表管理”章节，版本同步请参考“操作指南-24.5.2同步数据库”章节）
+
+d2）填写完数据库信息后，可单击测试校验数据库信息是否正确。
+```
