--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/6. 导出数据库文档.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/6. 导出数据库文档.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.2 数据库管理
+
+#### 4.24.2.6 导出数据库文档
+
+系统提供该功能，您可以直接导出数据库的结构文档，更加清晰地看到数据库的设计结构。
+
+#### 4.24.2.6.1 操作步骤
+
+a）进入项目，单击数据库设计，选中对应数据库，再单击三个点按钮 > 导出数据库文档，进入“导出数据库文档”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/6-1.png)
+
+##### 图6-1 单击导出数据库文档
