--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/2. 修改表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/2. 修改表.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.4 表管理
+
+#### 4.24.4.2 修改表
+
+系统提供该功能，您可以对已有数据表的各项信息进行修改。
+
+#### 4.24.4.2.1 步骤引导
+
+a）修改表基本信息
+
+b）修改表字段信息
+
+c）修改表索引信息
+
+d）修改表外键信息
+
+#### 4.24.4.2.1.1 修改表基本信息
