--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/2. 修改表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/2. 修改表.md
@@ -22,13 +22,13 @@ d）修改表外键信息
 
 a）进入数据库设计功能模块，单击已创建的数据库表后的三个点按钮 > 修改表，打开“编辑表信息管理”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/200800126-576d4e11-a013-4be6-a0b8-6a33455b2a9f.png)
 
 ##### 图2-1 单击修改表
 
 b）在“编辑表信息管理 > 数据表基本信息”页面，填写需要修改的表名和表注释，单击保存。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/200800156-0f26252a-5c12-4c67-8f42-1807adfa01ed.png)
 
 ##### 图2-2 填写需要修改的表名和表注释
 
@@ -38,7 +38,7 @@ a）单击数据表字段信息页签，进入“数据表字段信息”页。
 
 b）在“数据表字段信息”页，单击新增自定义表的字段信息，然后单击保存。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/200800167-b16a670e-e789-4b33-a038-2fb373a5a09e.png)
 
 ##### 图2-3 单击新增自定义表的字段信息
 
@@ -54,19 +54,19 @@ b2）字段数据类型如果为空，则需要先配置默认的数据类型，
 
 a）单击数据表索引信息页签，进入“数据表索引信息”页，单击左侧新增按钮，自定义表的索引信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-4.png)
+![image](https://user-images.githubusercontent.com/79617492/200800187-c59c5c20-623a-44bc-a76d-d54a21d34168.png)
 
 ##### 图2-4 单击左侧新增按钮
 
 b）单击右侧新增按钮，选择引入字段后，单击确定。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-5.png)
+![image](https://user-images.githubusercontent.com/79617492/200800203-6daeba9e-78da-403b-a06d-3822d431c154.png)
 
 ##### 图2-5 单击右侧新增按钮
 
 c）新增索引字段完成后，单击保存。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-6.png)
+![image](https://user-images.githubusercontent.com/79617492/200800223-7dbc8233-bb3a-4164-88b4-1735f879b4e8.png)
 
 ##### 图2-6 单击保存
 
@@ -78,7 +78,7 @@ a）单击数据表外键信息页签，进入“数据表外键信息”页。
 
 b）在“数据表外键信息”页面，单击新增自定义数据库表外键信息，新增完成后单击保存即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-7.png)
+![image](https://user-images.githubusercontent.com/79617492/200800262-96d28746-2505-475e-8b47-4e7e24695637.png)
 
 ##### 图2-7 单击新增自定义数据库表外键信息
 
